--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/Registracija.cshtml
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/Registracija.cshtml
@@ -3,63 +3,71 @@
 @{
     ViewBag.Title = "Registracija";
 }
-
-<h2>Registracija</h2>
-
-<div>
-    @ViewBag.Message
-</div>
-
-<form action="Register" method="post">
-    <table class="table">
-        <tr>
-            <td>Korisničko ime:</td>
-            <td><input type="text" name="korisnickoIme" /></td>
-        </tr>
-
-        <tr>
-            <td>Lozinka:</td>
-            <td><input type="password" name="loznika" /></td>
-        </tr>
-
-        <tr>
-            <td>Ime:</td>
-            <td><input type="text" name="ime" /></td>
-        </tr>
-        <tr>
-            <td>Prezime:</td>
-            <td><input type="text" name="prezime" /></td>
-        </tr>
-
-        <tr>
-            <td>Pol:</td>
-            <td>
-                <input list="polovi" name="pol" />
-                <datalist id="polovi">
-                    <option value="MUŠKI"></option>
-                    <option value="ŽENSKI"></option>
-                </datalist>
-            </td>
-        </tr>
-
-        <tr>
-            <td>Datum rođenja:</td>
-            <td><input type="date" name="datumRodjenja" /></td>
-        </tr>
-
-        <tr>
-            <td>Uloga:</td>
-            <td>
-                <input list="uloge" name="uloga" />
-                <datalist id="uloge">
-                    <option value="KUPAC"></option>
-                </datalist>
-            </td>
-        </tr>
-        <tr>
-            <td colspan="2">
-                <input type="submit" value="Registracija" />
-            </td>
-        </tr>
-    </table>
-</form>
+<body background="~/pozadina.jpg">
+    <h2 style="text-align:center; background-color:aliceblue; border:thin; border-color:aquamarine; font-family:'Times New Roman', Times, serif; font-style:italic; font-weight:500; color:darkblue">Registracija</h2>
+    <div>
+        @ViewBag.Message
+    </div>
+    <br />
+    <br />
+    <br />
+    <form action="Register" method="post">
+        <table style="background-color:aliceblue" align="center" class="table-striped" width="600" height="300">
+            <tr>
+                <td>Korisničko ime:</td>
+                <td><input type="text" name="korisnickoIme" /></td>
+            </tr>
+            <tr>
+                <td>Lozinka:</td>
+                <td><input type="password" name="loznika" /></td>
+            </tr>
+            <tr>
+                <td>Ime:</td>
+                <td><input type="text" name="ime" /></td>
+            </tr>
+            <tr>
+                <td>Prezime:</td>
+                <td><input type="text" name="prezime" /></td>
+            </tr>
+            <tr>
+                <td>Pol:</td>
+                <td>
+                    <input list="polovi" name="pol" />
+                    <datalist id="polovi">
+                        <option value="MUŠKI"></option>
+                        <option value="ŽENSKI"></option>
+                    </datalist>
+                </td>
+            </tr>
+            <tr>
+                <td>Datum rođenja:</td>
+                <td><input type="date" name="datumRodjenja" /></td>
+            </tr>
+            <tr>
+                <td>Uloga:</td>
+                <td>
+                    <input list="uloge" name="uloga" />
+                    <datalist id="uloge">
+                        <option value="KUPAC"></option>
+                    </datalist>
+                </td>
+            </tr>
+            <tr>
+                <td>Tip:</td>
+                <td>
+                    <input list="tipovi" name="tip" />
+                    <datalist id="tip">
+                        <option value="ZLATNI"></option>
+                        <option value="SREBRNI"></option>
+                    </datalist>
+                </td>
+            </tr>
+            <tr>
+                <td></td>
+                <td colspan="2">
+                    <input type="submit" class="btn btn-info" value="Registracija" />
+                </td>
+            </tr>
+        </table>
+    </form>
+</body>
