feature/register-owner

--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/Kupci.cshtml
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/Kupci.cshtml
@@ -89,7 +89,7 @@
             }
         }
     </table>
-    <h3 style="background-color:aliceblue">Registruj prodavca</h3>
+    <h3 style="background-color:aliceblue">Registruj vlasnika</h3>
     <form action="~/Registracija/RegisterVlasnika" method="post">
         <input type="submit" class="btn btn-info" value="Registruj" />
     </form>
