--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Shared/_Layout.cshtml
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div lass="navbar navbar-light navbar-fixed-top" style="background-color:lightcyan; font-family:'Times New Roman', Times, serif; font-weight:400; font-style:italic; font-size:larger; color:darkblue">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -16,13 +16,30 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Sajt - Rent - A - Car", "Index", "Vozilo", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Pocetna strana", "Index", "Vozilo")</li>
+                    @if (Session["Korisnik"] == null)
+                    {
+                        <li>@Html.ActionLink("Prijavite se", "Prijava", "Registracija")</li>
+                        <li>@Html.ActionLink("Registrujte se", "Registracija", "Registracija")</li>
+                    }
+                    @if (Session["Korisnik"] != null)
+                    {
+                        <li>@Html.ActionLink("Profil", "ProfilKorisnika", "Registracija")</li>
+
+                        Rent_A_Car_PR_7_2016.Models.Korisnik korisnik = (Rent_A_Car_PR_7_2016.Models.Korisnik)Session["Korisnik"];
+                        if (korisnik.Uloga.Equals(Rent_A_Car_PR_7_2016.Models.UlogaKorisnika.ADMINISTRATOR))
+                        {
+                            <li>@Html.ActionLink("Lista korisnika", "ListaKupaca", "Registracija")</li>
+                        }
+
+                        <li>@Html.ActionLink("Odjavite se", "Logout", "Registracija")</li>
+
+                    }
+
                 </ul>
             </div>
         </div>
