--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/Kupci.cshtml
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/Kupci.cshtml
@@ -45,9 +45,9 @@
         <label>Uloga:</label>
         <select name="uloga">
             <option value=""></option>
-            <option value="ADMINISTRATOR">ADMINISTRATOR</option>
-            <option value="VLASNIK">VLASNIK VOZILA</option>
-            <option value="KUPAC">KUPAC</option>
+            <option value="GLAVNI_MENADZER">GLAVNI MENADZER</option>
+            <option value="MENADZER">MENADZER</option>
+            <option value="KLIJENT">KLIJENT</option>
         </select>
         &nbsp;&nbsp;
         <input type="submit" class="btn btn-info" value="Filtriraj" />
@@ -89,7 +89,7 @@
             }
         }
     </table>
-    <h3 style="background-color:aliceblue">Registruj vlasnika</h3>
+    <h3 style="background-color:aliceblue">Registruj menadzera</h3>
     <form action="~/Registracija/RegisterVlasnika" method="post">
         <input type="submit" class="btn btn-info" value="Registruj" />
     </form>
