--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/Registracija.cshtml
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/Registracija.cshtml
@@ -48,7 +48,7 @@
                 <td>
                     <input list="uloge" name="uloga" />
                     <datalist id="uloge">
-                        <option value="KUPAC"></option>
+                        <option value="KLIJENT"></option>
                     </datalist>
                 </td>
             </tr>
