--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/Prijava.cshtml
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/Prijava.cshtml
@@ -1,5 +1,4 @@
-﻿<h2 style="text-align:center; background-color:aliceblue; border:thin; border-color:aquamarine; font-family:'Times New Roman', Times, serif; font-style:italic; font-weight:500; color:darkblue">Prijava</h2>
-<div>
+﻿<div>
     @ViewBag.Message
 </div>
 <body background="~/pozadina.jpg">
@@ -7,22 +6,29 @@
     <br />
     <br />
     <form action="~/Registracija/Login" method="post">
-        <table style="background-color:aliceblue" align="center" class="table-striped" width="320" height="150">
-            <tr>
-                <td>Korisničko ime:</td>
-                <td><input type="text" name="korisnickoIme" /></td>
-            </tr>
-            <tr>
-                <td>Šifra:</td>
-                <td><input type="password" name="Lozinka" /></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td colspan="2">
-                    <input type="submit" class="btn btn-info" value="Prijava" />
-                </td>
-            </tr>
-        </table>
+        <div>
+            <table style="background-color:aliceblue; border-collapse:separate; border-spacing:0.85em" align="center" class="table-striped" width="320" height="200">
+                <tr>
+                    <td colspan="2"><img src="~/avatar.png" alt="Avatar" height="100" width="100" style="margin-left:75pt"></td>
+                    <td></td>
+                </tr>
+                <caption style="text-align:center; background-color:aliceblue; border:thin; border-color:aquamarine; font-family:'Times New Roman', Times, serif; font-style:italic; font-weight:500; color:darkblue; font-size:20pt">Prijava</caption>
+                <tr>
+                    <td>Korisničko ime:</td>
+                    <td><input type="text" name="korisnickoIme" /></td>
+                </tr>
+                <tr>
+                    <td>Šifra:</td>
+                    <td><input type="password" name="Lozinka" /></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td colspan="2">
+                        <input type="submit" class="btn btn-info" value="Prijava" />
+                    </td>
+                </tr>
+            </table>
+        </div>
     </form>
 </body>
 
