--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Vozilo/Index.cshtml
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Vozilo/Index.cshtml
@@ -20,7 +20,7 @@
             <tr>
                 <td>
                     <form action="~/Vozilo/SearchByMarka">
-                        <input list="naziv" name="naziv" />
+                        <input list="marka" name="marka" />
                         <input type="submit" class="btn btn-info" value="Pretraga" />
                     </form>
                 </td>
@@ -86,7 +86,7 @@
     @if (Session["Korisnik"] != null)
     {
         Rent_A_Car_PR_7_2016.Models.Korisnik korisnik = (Rent_A_Car_PR_7_2016.Models.Korisnik)Session["Korisnik"];
-        if (korisnik.Uloga.Equals(Rent_A_Car_PR_7_2016.Models.UlogaKorisnika.VLASNIK))
+        if (korisnik.Uloga.Equals(Rent_A_Car_PR_7_2016.Models.UlogaKorisnika.MENADZER))
         {
             <form action="~/Vozilo/DodajNovoVozilo">
                 <input type="submit" class="btn btn-info" value="Dodaj novo vozilo" />
@@ -150,7 +150,7 @@
     @if (Session["Korisnik"] != null)
     {
         Rent_A_Car_PR_7_2016.Models.Korisnik korisnik = (Rent_A_Car_PR_7_2016.Models.Korisnik)Session["Korisnik"];
-        if (korisnik.Uloga.Equals(Rent_A_Car_PR_7_2016.Models.UlogaKorisnika.ADMINISTRATOR))
+        if (korisnik.Uloga.Equals(Rent_A_Car_PR_7_2016.Models.UlogaKorisnika.GLAVNI_MENADZER))
         {
             <table class="table table-striped">
                 <tr>
