feature/login-changes

--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/Kupci.cshtml
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/Kupci.cshtml
@@ -5,7 +5,7 @@
 
                 ViewBag.Title = "Kupci";
 }
-<body background="~/pozadina.jpg">
+<body background="~/Images/pozadina.jpg">
     <div style="text-align:center">
         <h2 style="background-color:aliceblue">Korisnici sistema</h2>
     </div>
