--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/ProfilKorisnika.cshtml
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/ProfilKorisnika.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "ProfilKorisnika";
 }
-<body background="~/pozadina.jpg">
+<body background="~/Images/pozadina.jpg">
     <h2 style="text-align:center; background-color:aliceblue; border:thin; border-color:aquamarine; font-family:'Times New Roman', Times, serif; font-style:italic; font-weight:500; color:darkblue">Profil korisnika - @ViewBag.korisnik.KorisnickoIme</h2>
     <br />
     <br />
