--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/RegistracijaVlasnika.cshtml
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/RegistracijaVlasnika.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "RegistracijaVlasnika";
 }
-<body background="~/pozadina.jpg">
+<body background="~/Images/pozadina.jpg">
     <h2 style="text-align:center; background-color:aliceblue; border:thin; border-color:aquamarine">Registracija menadzera</h2>
     <div>
         @ViewBag.Message
