--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Vozilo/DodajNovoVozilo.cshtml
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Vozilo/DodajNovoVozilo.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "DodajNovoVozilo";
 }
-<body background="~/pozadina.jpg">
+<body background="~/Images/pozadina.jpg">
     <h2 style="text-align:center; background-color:aliceblue; border:thin; border-color:aquamarine">Dodaj novo vozilo</h2>
     <br />
     <br />
