--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/Registracija.cshtml
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/Registracija.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "Registracija";
 }
-<body background="~/pozadina.jpg">
+<body background="~/Images/pozadina.jpg">
     <h2 style="text-align:center; background-color:aliceblue; border:thin; border-color:aquamarine; font-family:'Times New Roman', Times, serif; font-style:italic; font-weight:500; color:darkblue">Registracija</h2>
     <div>
         @ViewBag.Message
