--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Shared/_Layout.cshtml
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Shared/_Layout.cshtml
@@ -8,9 +8,9 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div lass="navbar navbar-light navbar-fixed-top" style="background-color:lightcyan; font-family:'Times New Roman', Times, serif; font-weight:400; font-style:italic; font-size:larger; color:darkblue">
+    <div lass="navbar navbar-light navbar-fixed-top" style="background-color:lightcyan; width:1150px; margin-left:135px; opacity:0.77; font-family:'Comic Sans MS'; font-weight:400; font-style:italic; font-size:larger; color:darkblue">
         <div class="container">
-            <div class="navbar-header">
+            <div class="navbar-header" style="margin-left:220px">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
