--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Vozilo/Index.cshtml
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Vozilo/Index.cshtml
@@ -5,7 +5,7 @@
     ViewBag.Title = "Home Page";
 }
 
-<body background="~/pozadina.jpg">
+<body background="~/Images/pozadina.jpg">
 
     <h2 style="text-align:center; background-color:aliceblue; border:thin; border-color:aquamarine; font-family:'Times New Roman', Times, serif; font-style:italic; font-weight:500; color:darkblue">Dobrodošli na sajt - Rent - A - Car </h2>
     <br />
