feature/registration-changes

--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/Prijava.cshtml
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/Prijava.cshtml
@@ -11,7 +11,7 @@
                 </tr>
                 <caption style="text-align:center; background-color:aliceblue; border:thin; border-color:aquamarine; font-family:'Comic Sans MS', Times, serif; font-style:italic; opacity:0.8; font-weight:500; color:darkblue; font-size:19pt">Prijava</caption>
                 <tr>
-                    <td style="font-family:'Comic Sans MS';">Korisničko ime:</td>
+                    <td style="font-family:'Comic Sans MS'">Korisničko ime:</td>
                     <td><input type="text" name="korisnickoIme" style="border-radius:9px; border-width:1px" /></td>
                 </tr>
                 <tr>
