--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/Registracija.cshtml
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/Registracija.cshtml
@@ -3,36 +3,37 @@
 @{
     ViewBag.Title = "Registracija";
 }
-<body background="~/Images/pozadina.jpg">
-    <h2 style="text-align:center; background-color:aliceblue; border:thin; border-color:aquamarine; font-family:'Times New Roman', Times, serif; font-style:italic; font-weight:500; color:darkblue">Registracija</h2>
-    <div>
-        @ViewBag.Message
-    </div>
+<body background="~/Images/pozadinalogin.jpg" style="background-repeat:no-repeat; background-size:cover">
     <br />
     <br />
     <br />
     <form action="Register" method="post">
-        <table style="background-color:aliceblue" align="center" class="table-striped" width="600" height="300">
+        <table style="background-color:aliceblue; opacity:0.9; border-collapse:separate; border-spacing:0.85em" align="center" class="table-striped" width="600" height="300">
             <tr>
-                <td>Korisničko ime:</td>
-                <td><input type="text" name="korisnickoIme" /></td>
+                <td colspan="2"><img src="~/Images/avatar.png" alt="Avatar" height="100" width="100" style="margin-left:175pt"></td>
+                <td></td>
+            </tr>
+            <caption style="text-align:center; background-color:aliceblue; border:thin; border-color:aquamarine; font-family:'Comic Sans MS', Times, serif; font-style:italic; opacity:0.8; font-weight:500; color:darkblue; font-size:19pt">Registracija</caption>
+            <tr>
+                <td style="font-family:'Comic Sans MS'">Korisničko ime:</td>
+                <td><input type="text" placeholder="bar 3 karaktera" name="korisnickoIme" style="border-radius:9px; border-width:1px" /></td>
             </tr>
             <tr>
-                <td>Lozinka:</td>
-                <td><input type="password" name="loznika" /></td>
+                <td style="font-family:'Comic Sans MS'">Lozinka:</td>
+                <td><input type="password"  placeholder="bar 5 karaktera" name="loznika" style="border-radius:9px; border-width:1px" /></td>
             </tr>
             <tr>
-                <td>Ime:</td>
-                <td><input type="text" name="ime" /></td>
+                <td style="font-family:'Comic Sans MS'">Ime:</td>
+                <td><input type="text" name="ime" style="border-radius:9px; border-width:1px" /></td>
             </tr>
             <tr>
-                <td>Prezime:</td>
-                <td><input type="text" name="prezime" /></td>
+                <td style="font-family:'Comic Sans MS'">Prezime:</td>
+                <td><input type="text" name="prezime" style="border-radius:9px; border-width:1px" /></td>
             </tr>
             <tr>
-                <td>Pol:</td>
+                <td style="font-family:'Comic Sans MS'">Pol:</td>
                 <td>
-                    <input list="polovi" name="pol" />
+                    <input list="polovi" name="pol" style="border-radius:9px; border-width:1px" />
                     <datalist id="polovi">
                         <option value="MUŠKI"></option>
                         <option value="ŽENSKI"></option>
@@ -40,13 +41,13 @@
                 </td>
             </tr>
             <tr>
-                <td>Datum rođenja:</td>
-                <td><input type="date" name="datumRodjenja" /></td>
+                <td style="font-family:'Comic Sans MS'">Datum rođenja:</td>
+                <td><input type="date" name="datumRodjenja" style="border-radius:9px; border-width:1px" /></td>
             </tr>
             <tr>
-                <td>Uloga:</td>
+                <td style="font-family:'Comic Sans MS'">Uloga:</td>
                 <td>
-                    <input list="uloge" name="uloga" />
+                    <input list="uloge" name="uloga" style="border-radius:9px; border-width:1px" />
                     <datalist id="uloge">
                         <option value="KLIJENT"></option>
                     </datalist>
@@ -55,9 +56,12 @@
             <tr>
                 <td></td>
                 <td colspan="2">
-                    <input type="submit" class="btn btn-info" value="Registracija" />
+                    <input type="submit" class="btn btn-info" value="Registracija" style="border-radius:9px; width:170px" />
                 </td>
             </tr>
         </table>
+        <div style="margin-left:380px; font-family:'Comic Sans MS'; background-color:lightcoral; width:427px; font-size:16px">
+            @ViewBag.Message
+        </div>
     </form>
 </body>
